# flask-template

./: Dockerfile  Taskfile.yml  init-template.sh  main.py  pyproject.toml
template/: constants.py
template/blueprints/: __init__.py
template/blueprints/root/: api.py
template/flask/: config.py  factory.py  util.py
