[project]
name = "template"
version = "0.1.0"
description = "Description goes here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
]

[dependency-groups]
dev = [
    "pyrefly>=0.41.1",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 120
